# Cuda_parallel_programminng

./: .gitignore  CMakeLists.txt  README.md  cuda_terms_musKnow.txt  run.sh
inc/: auxilliary.h  matrix_kernels.h  matrix_utilites_cpu.h  vector_kernels.h
src/: auxilliary.cpp  main.cu  matrix_kernels.cu  matrix_utilites_gpu.cpp  matrix_utilities_cpu.cpp  vector_kernels.cu
